# mobile-gs-scan

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.prebuilt.yml  docker-compose.yml
.github/: release-notes.json
.github/workflows/: branch-name.yml  build-images.yml  ci.yml  release.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
caddy/: Caddyfile
docs/: architecture.md  roadmap.md
scripts/: android-sdk-bootstrap.sh  android-sdk.sh  doctor.sh  jdk17.sh  mkcert-bootstrap.sh
web/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/public/: manifest.webmanifest
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: CaptureCard.tsx  CaptureList.tsx  CapturePairing.tsx  JobLogPanel.tsx  MeshPanel.tsx  MobileCaptureUI.tsx  PebbleHeader.tsx  PebbleMark.tsx  Providers.tsx  SplatEditor.tsx  (+4 more)
worker/: .dockerignore  Dockerfile.api  Dockerfile.base  Dockerfile.gs  pyproject.toml
worker/app/: config.py  main.py  words.py  worker_main.py
worker/app/api/: captures.py  health.py  jobs.py  scenes.py
worker/app/jobs/: events.py  runner.py  schema.py  store.py
worker/app/pipeline/: _logtail.py  _mesh_subprocess.py  _running.py  _spz.py  dispatch.py  export.py  extract.py  filter.py  mesh.py  sfm.py  thumbnail.py  train.py
worker/app/sessions/: ingest.py
worker/tests/: conftest.py  test_delete_capture.py  test_filter.py  test_thumbnail.py
(+46 files in other folders)
