[project]
name = "mobile-gs-scan-worker"
version = "0.1.0"
requires-python = ">=3.11"
description = "FastAPI broker + worker-gs for the mobile-gs-scan studio"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pydantic-settings>=2",
  "python-multipart",
  "sqlalchemy>=2",
  "aiosqlite",
  "httpx",
  "structlog",
  "pillow",
  "numpy",
  "websockets",
]

[tool.ruff]
line-length = 100
target-version = "py311"
